Make a basic newbie model(including secure passwords)

--- a/config/database.yml
+++ b/config/database.yml
@@ -43,7 +43,7 @@ test:
   encoding: unicode
   database: pickup_test
   pool: 5
-  username: pickup
+  username: beizhao
   password:
 
 production:
